network-policy/all-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: netology-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
